# ChangeLog for sci-biology/apollo
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  07 Feb 2012; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz> apollo-9999.ebuild:
  initial ebuild
