@@ -2,13 +2,13 @@
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
-EAPI=3
+EAPI=5
 
 inherit java-pkg-2 java-ant-2
 
 [ "$PV" == "9999" ] && inherit subversion
 
-DESCRIPTION="The Apollo genome editor is a Java-based application for browsing and annotating genomic sequences."
+DESCRIPTION="Apollo genome editor is Java-based application for browsing and annotation of genomic sequences."
 HOMEPAGE="http://gmod.org/wiki/Apollo"
 if [ "$PV" == "9999" ]; then
 	#SRC_URI="http://gmod.svn.sourceforge.net/viewvc/gmod/apollo/?view=tar" # Apollo_unix.sh
@@ -24,13 +24,11 @@ SLOT="0"
 IUSE=""
 KEYWORDS=""
 
-DEPEND="dev-vcs/subversion
-		>=virtual/jdk-1.5
-		>=dev-java/sun-jdk-1.5
+DEPEND=">=virtual/jre-1.5
+		dev-vcs/subversion
 		dev-java/ant-core
 		dev-lang/perl"
-RDEPEND=">=virtual/jre-1.5
-		${DEPEND}"
+RDEPEND="${DEPEND}"
 
 src_unpack() {
 	subversion_src_unpack || die
